# Parallax

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
output/: scrape_aljazeera.json
src/: container.py  main.py
src/analysis/: engine.py  metrics.py
src/database/: models.py
src/interfaces/: IWebScraper.py  __init__.py
src/parallax/: container.py  main.py
src/parallax/analysis/: engine.py  metrics.py
src/parallax/helpers/: __init__.py  deduplicator.py  modeltofile.py
src/parallax/interfaces/: IAnalysisMetrics.py  INarrativeAnalysis.py  __init__.py
src/parallax/interfaces/enter/: IAnalysisMetrics.py  INarrativeAnalysis.py  IScraper.py  IWebScraper.py  __init__.py
src/parallax/interfaces/enter/usecases/: IAnalysisUseCase.py  IExecutorUseCase.py  IRenderUseCase.py  IScraperUseCase.py  __init__.py
src/parallax/mappers/: __init__.py  narrative_mapper.py
src/parallax/models/: __init__.py  headline.py  narrative.py
src/parallax/models/enter/: __init__.py  headline.py  narrative.py  narrativeLLM.py
src/parallax/scrapers/: base.py  web.py
src/parallax/scrapers/websites/: base.py  newsapi.py
src/parallax/services/: __init__.py  analysis_service.py  executor_service.py  scraper_service.py
src/parallax/services/analysis_service/: container.py
src/parallax/services/pipeline_service/: container.py
src/parallax/services/render_service/: Dockerfile  container.py
src/parallax/services/scraper_service/: Dockerfile  container.py
src/parallax/ui/: app.py
src/scrapers/: __init__.py  base.py  web.py
(+20 files in other folders)
