[project]
name = "parallax"
version = "0.1.0"
description = "An AI-powered news aggregator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector",
    "loguru",
    "botasaurus",
    "requests",
    "beautifulsoup4",
    "openai",
    "python-dotenv",
    "ollama",
    "newsapi-python",
    "rapidfuzz>=3.14.5",
    "fastapi",
    "uvicorn[standard]",
    "dacite",
    "httpx",
    
]

[project.scripts]
parallax = "parallax.main:main"
